--- a/9.实战 Docker 持续集成和部署/4-测试成功后自动部署/.drone.yml
+++ b/9.实战 Docker 持续集成和部署/4-测试成功后自动部署/.drone.yml
@@ -5,11 +5,11 @@ pipeline:
       - python3 test.py
   deploy:
     image: appleboy/drone-ssh
-    host: 115.159.181.16
-    username: ubuntu
+    host: linmu.date
+    username: root
     secrets: [ ssh_key ]
     port: 22
     script:
-      - cd /home/ubuntu/test
+      - cd /home/ubuntu/todo
       - git pull
       - sudo sh reload.sh
